chore: fix formatting inconsistencies across stylesheets and improve readability in README

--- a/src/components/Bookmarks/Bookmarks.module.css
+++ b/src/components/Bookmarks/Bookmarks.module.css
@@ -1,4 +1,5 @@
-.bookmarksListWrap {}
+.bookmarksListWrap {
+}
 
 .bookmarksListWrap > a:first-of-type {
 	border-top-left-radius: 5px;
